Add math in pcadapt pres

--- a/Presentations/pcadapt/pcadapt.html
+++ b/Presentations/pcadapt/pcadapt.html
@@ -120,6 +120,14 @@
 <li><p><a href='https://github.com/keurcien' title=''>Keurcien Luu</a> is in the room, he develops the R package and can answer questions.</p></li>
 </ol>
 
+</article></slide><slide class=''><hgroup><h2>Some maths</h2></hgroup><article  id="some-maths">
+
+<ol>
+<li><p>For each SNP, <em>pcadapt</em> computes a vector of z-scores \((z_1,\dots,z_K)\) that corresponds to the z-scores obtained when regressing a SNP by the \(K\) PC.</p></li>
+<li><p>Robust <a href='https://en.wikipedia.org/wiki/Mahalanobis_distance' title=''>Mahalanobis distances</a> are computed based on all vectors of z-scores.</p></li>
+<li><p>Mahalanobis distance can be approximated by a constant (genomic inflation factor) times a chi-square distribution with \(K\) degrees of freedom.</p></li>
+</ol>
+
 </article></slide><slide class='segue dark nobackground level1'><hgroup class = 'auto-fadein'><h2>Using pcadapt to look for local adaptation in populations of Dahu</h2></hgroup><article  id="using-pcadapt-to-look-for-local-adaptation-in-populations-of-dahu">
 
 </article></slide><slide class=''><hgroup><h2>Choice of the number \(K\) of PCs</h2></hgroup><article  id="choice-of-the-number-k-of-pcs">
